# pyrand

./: Cargo.toml  README.md  build.ps1  pyproject.toml  pyrand.pyi
examples/: example.py
src/: lib.rs
